Mon Mar 13 02:24:10 MST 2006  David Trowbridge <trowbrds@gmail.com>

	* src/fe-gnome/conversation-panel.c:
	* src/fe-gnome/xtext.c:
	* src/fe-gnome/xtext.h:
	  - Hopefully fix clipboard and selection issues.

Sun Mar 12 11:28:54 MST 2006  David Trowbridge <trowbrds@gmail.com>

	* src/fe-gnome/navigation-tree.c:
	  - Clarify autojoin/autoconnect strings

Sun Mar 12 21:59:03 MST 2006  David Trowbridge <trowbrds@gmail.com>

	* src/fe-gnome/main-window.c:
	  - Use theme-based colors for the nickname button to indicate away
	    status, rather than hard-coded ones (#332966)

Sun Mar 12 21:28:24 MST 2006  David Trowbridge <trowbrds@gmail.com>

	* src/fe-gnome/navigation-tree.h:
	* src/fe-gnome/conversation-panel.c:
	* src/fe-gnome/conversation-panel.h:
	* src/fe-gnome/main-window.c:
	* src/fe-gnome/fe-gnome.c:
	* src/fe-gnome/navigation-tree.c:
	  - Handle "focus" correctly when opening new "tabs."  This means
	    xchat-gnome will no longer interrupt you mid-sentence when someone
	    sends a private message (#334236)

Sun Mar 12 20:23:05 MST 2006  Jeremy Nickurak <atrus@rifetech.com>

	* src/fe-gnome/preferences.c:
	  - Stop trying to find a palette scheme, fix palette loading bug.
	    (#327711)

Sun Mar 12 18:48:43 CET 2006  Guillaume Desmottes <cass@skynet.be>

	* plugins/notification/notification.c:
	* plugins/notification/notification.schemas.in:
	  - Add the /apps/xchat/plugins/notification/level gconf key
	    to configure the notification level. (#334238)
	  - Remove the /apps/xchat/plugins/notification/persistant gconf
	    key because we don't need it anymore with the new key.
	  - Fix a leak by freeing the GConfClient.
	  - Remove add_channels_foreach_cb () because this function
	    is called nowhere.
	  - Add a test to avoid to display the notification icon at
	    launching if not desired.

Fri Mar 10 17:20:52 MST 2006  David Trowbridge <trowbrds@gmail.com>

	* src/fe-gnome/main-window.c:
	  - Put main menus on an icon diet.
